<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="151dp"
        android:layout_height="171dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bg" />

    <EditText
    android:id="@+id/username_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/username"
    android:textColor="@color/black"
    android:textSize="25sp"
    android:background="@drawable/rounded_corner"
    android:padding="12dp"
    android:layout_marginStart="16dp"
    android:inputType="text"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:onClick="openac3"/>

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E3D7D7"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner">
    </Spinner>




</LinearLayout>