<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:orientation="horizontal"
        android:background="@color/bg0">

        <ImageButton
            android:id="@+id/home12"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/whitearrow_back" />

        <ImageView
            android:layout_width="148dp"
            android:layout_height="156dp"
            android:layout_marginLeft="70dp"
            android:layout_gravity="center"
            android:src="@drawable/person" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:background="@color/bg0"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <TextView
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="user.21.ce@iite.abcxyzuni.ac.in"
        android:layout_marginTop="160dp"
        android:textColor="@color/white"
        android:background="@color/bg0"
        android:gravity="center"
        android:textSize="20dp" />

    <Button
        android:id="@+id/my_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/fees_button"
        android:layout_below="@+id/user_id"/>
    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:background="@drawable/fees_button"
        android:layout_below="@+id/my_pro"/>
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:background="@drawable/fees_button"
        android:layout_below="@+id/reset"/>

<!--    <Spinner-->
<!--        android:id="@+id/spinner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:layout_below="@+id/logout_btn"-->
<!--        android:background="@drawable/rounded_corner">-->

<!--    </Spinner>-->

</RelativeLayout>