<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity9">

    <ImageButton
        android:id="@+id/home5"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/h1"/>

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="60dp"
        android:background="@color/bg0"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="104dp"
            android:layout_height="80dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="5dp"
            android:src="@drawable/attendance" />

        <TextView
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Attendance"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/attenlay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay1"
        android:background="@color/bg1"
        android:layout_marginTop="50dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <!-- Subject 1 Attendance Icon -->
        <ImageView
            android:layout_width="98dp"
            android:layout_height="99dp"
            android:background="@color/bg1"
            android:src="@drawable/subicon" />

        <!-- Subject 1 Attendance Button -->

        <!-- Subject 1 Attendance Details -->
        <Button
            android:id="@+id/mad_sub"
            android:layout_width="107dp"
            android:layout_height="99dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="MAD"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/rounded_corner"
            android:layout_marginLeft="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mad_total"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/mad_percentage"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/per"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/attenlay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/bg1"
        android:gravity="fill_horizontal"
        android:layout_below="@+id/attenlay1">

        <!-- Subject 2 Attendance Icon -->
        <ImageView
            android:layout_width="98dp"
            android:layout_height="99dp"
            android:src="@drawable/subicon" />

        <!-- Subject 2 Attendance Button -->
        <Button
            android:id="@+id/wt_sub"
            android:layout_width="107dp"
            android:layout_height="99dp"
            android:gravity="center"
            android:background="@drawable/rounded_corner"
            android:text="WT"
            android:textSize="30sp" />

        <!-- Subject 2 Attendance Details -->
        <LinearLayout
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wt_total"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/wt_percentage"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/per"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/lay20"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="90dp"-->
<!--        android:weightSum="3"-->
<!--        android:layout_marginLeft="12dp"-->
<!--        android:layout_marginRight="12dp"-->
<!--        android:layout_marginBottom="12dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:layout_below="@+id/lay1"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:layout_width="81dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="0"-->
<!--            android:src="@drawable/subicon" />-->

<!--        <TextView-->
<!--            android:id="@+id/cancel_btn_popup1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="90dp"-->
<!--            android:layout_marginEnd="3dp"-->
<!--            android:layout_weight="2"-->
<!--            android:background="@drawable/square_button1"-->
<!--            android:foreground="?attr/selectableItemBackground"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/mad"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            tools:ignore="UnusedAttribute" />-->

<!--        <TextView-->
<!--            android:id="@+id/cancel_btn_popup2"-->
<!--            android:layout_width="10dp"-->
<!--            android:layout_height="90dp"-->
<!--            android:layout_marginEnd="3dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/square_button"-->
<!--            android:foreground="?attr/selectableItemBackground"-->
<!--            android:text="@string/total"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            tools:ignore="UnusedAttribute" />-->


    </RelativeLayout>
